apps/staging/paperless-ngx/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: lan-gateway
      namespace: lan-gateway
      sectionName: lan-https
  hostnames:
    - "paperless.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: paperless-ngx
          port: 8000
